updated alignment issue with icons and added screenshot to md file

--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ button {
 }
 
 .sound-toggle {
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     cursor: pointer;
     display: inline-block;
     transition: transform 0.2s ease;
@@ -477,7 +477,7 @@ button:focus, .sound-dropdown:focus, .noise-dropdown:focus, .skip-break:focus, .
     }
     
     .sound-toggle {
-        margin-bottom: 30px;
+        margin-bottom: 15px;
     }
     
     .sound-icon {
@@ -581,7 +581,7 @@ button:focus, .sound-dropdown:focus, .noise-dropdown:focus, .skip-break:focus, .
     }
     
     .sound-toggle {
-        margin-bottom: 25px;
+        margin-bottom: 15px;
     }
     
     .sound-icon {
@@ -637,6 +637,7 @@ body, .container, .break-instructions, .sound-instructions, .noise-instructions,
     cursor: pointer;
     display: inline-block;
     transition: transform 0.2s ease;
+    margin-bottom: 15px;
 }
 .theme-toggle:hover {
     transform: scale(1.1);
@@ -646,7 +647,19 @@ body, .container, .break-instructions, .sound-instructions, .noise-instructions,
     height: 40px;
 }
 
+@media screen and (max-width: 1023px) {
+    .theme-toggle {
+        margin-bottom: 40px;
+    }
+    .sound-toggle {
+        margin-bottom: 40px;
+    }
+}
+
 @media screen and (max-width: 767px) {
+    .theme-toggle {
+        margin-bottom: 15px;
+    }
     .theme-icon {
         width: 25px;
         height: 25px;
@@ -654,6 +667,9 @@ body, .container, .break-instructions, .sound-instructions, .noise-instructions,
 }
 
 @media screen and (max-width: 480px) {
+    .theme-toggle {
+        margin-bottom: 15px;
+    }
     .theme-icon {
         width: 22px;
         height: 22px;
